samples/_failures_safe/1761040217_f0835e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74a094c2.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_74a094c2.c:119:34: error: expected ‘)’ at end of input
  119 |                         (aval < 0
      |                         ~        ^
      |                                  )
./samples/SAFE/__tmp_74a094c2.c:119:25: error: expected declaration or statement at end of input
  119 |                         (aval < 0
      |                         ^
./samples/SAFE/__tmp_74a094c2.c:119:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74a094c2.c:119:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74a094c2.c:119:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74a094c2.c:119:25: error: expected declaration or statement at end of input
